adjust booking logic

--- a/eParty/Views/Home/Book.cshtml
+++ b/eParty/Views/Home/Book.cshtml
@@ -62,7 +62,7 @@
 
                             <!-- Tên buổi tiệc -->
                             <div class="col-lg-4 col-md-6">
-                                <input type="text" name="PartyName" class="form-control border-primary p-2"
+                                <input type="text" name="Name" class="form-control border-primary p-2"
                                        placeholder="Tên buổi tiệc (VD: Sinh nhật, Hội nghị...)" required>
                             </div>
 
