--- a/eParty/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/eParty/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -101,27 +101,27 @@ toggle-sidebar">
                                 <ul class="nav nav-collapse">
                                     <li>
                                         <a href="/Admin/Foods">
-                                            <i class="fas fa-utensils"></i> <span class="sub-item">Food</span>
+                                            <i class="fas fa-utensils"></i> <span class="nav-item">Food</span>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="/Admin/FoodIngredients">
-                                            <span class="sub-item">Food Ingredient</span>
-                                        </a>
+                                            <i class="fas fa-seedling"></i><span class="nav-item">Food Ingredient</span>
+</a>
                                     </li>
                                     <li>
                                         <a href="/Admin/Ingredients">
-                                            <i class="fas fa-carrot"></i> <span class="sub-item">Ingredient</span>
+                                            <i class="fas fa-apple-alt"></i> <span class="nav-item">Ingredient</span>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="/Admin/Providers">
-                                            <i class="fas fa-truck-moving"></i> <span class="sub-item">Provider</span>
+                                            <i class="fas fa-truck-moving"></i> <span class="nav-item">Provider</span>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="/Admin/Parties">
-                                            <i class="fas fa-glass-cheers"></i> <span class="sub-item">Quản lý Tiệc</span>
+                                            <i class="fas fa-wine-glass"></i> <span class="nav-item">Quản lý Tiệc</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
